<resources>
    <string name="app_name">Calculadora</string>
    <string name="button_0">0</string>
    <string name="Button_2">2</string>
    <string name="Button_1">1</string>
    <string name="_3">3</string>
    <string name="Button_4">4</string>
    <string name="Button_5">5</string>
    <string name="_8">8</string>
    <string name="Button_6">6</string>
    <string name="Button_7">7</string>
    <string name="Button_9">9</string>
    <string name="Button_ac">AC</string>
    <string name="Button_decimal">,</string>
    <string name="Button_equals">=</string>
    <string name="Button_minus">-</string>
    <string name="Button_add">+</string>
    <string name="Button_Split">/</string>
    <string name="Button_calculadora">Calculadora</string>
    <string name="text_result">0</string>
    <string name="Button_multiply">*</string>
</resources>