<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:backgroundTint="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textCalculatorName"
        android:layout_width="411dp"
        android:layout_height="38dp"
        android:layout_marginBottom="28dp"
        android:background="@color/blue"
        android:text="@string/Button_calculadora"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="317dp"
        android:layout_height="122dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="50dp"
        android:layoutDirection="rtl"
        android:text="@string/text_result"
        android:textColor="@color/white"
        android:textSize="96sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCalculatorName"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/button0"
        android:layout_width="175dp"
        android:layout_height="73dp"
        android:backgroundTint="@color/black_grey"
        android:text="@string/button_0"
        android:textSize="34sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonDecimal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="75dp"
        android:layout_height="73dp"
        android:backgroundTint="@color/black_grey"
        android:text="@string/Button_2"
        android:textSize="34sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button3"
        android:layout_width="75dp"
        android:layout_height="73dp"
        android:backgroundTint="@color/black_grey"
        android:text="@string/_3"
        android:textSize="34sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonDecimal"
        app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="75dp"
        android:layout_height="73dp"
        android:backgroundTint="#FF9800"
        android:text="@string/Button_add"
        android:textSize="34sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEquals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/buttonMinus" />

    <Button
        android:id="@+id/button5"
        android:layout_width="75dp"
        android:layout_height="73dp"
        android:backgroundTint="@color/black_grey"
        android:text="@string/Button_5"
        android:textSize="34sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button8"
        android:layout_width="75dp"
        android:layout_height="73dp"
        android:backgroundTint="@color/black_grey"
        android:text="@string/_8"
        android:textSize="34sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/buttonAc" />

    <Button
        android:id="@+id/button6"
        android:layout_width="75dp"
        android:layout_height="73dp"
        android:backgroundTint="@color/black_grey"
        android:text="@string/Button_6"
        android:textSize="34sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/buttonMinus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button9"
        android:layout_width="75dp"
        android:layout_height="73dp"
        android:backgroundTint="@color/black_grey"
        android:text="@string/Button_9"
        android:textSize="34sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/buttonMultiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/buttonSplit" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="75dp"
        android:layout_height="73dp"
        android:backgroundTint="@color/orange"
        android:text="@string/Button_minus"
        android:textSize="34sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultiply" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="75dp"
        android:layout_height="73dp"
        android:backgroundTint="@color/orange"
        android:text="@string/Button_multiply"
        android:textSize="34sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMinus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/buttonSplit" />

    <Button
        android:id="@+id/buttonSplit"
        android:layout_width="175dp"
        android:layout_height="73dp"
        android:backgroundTint="@color/orange"
        android:text="@string/Button_Split"
        android:textSize="34sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonAc"
        app:layout_constraintTop_toBottomOf="@+id/textResult" />

    <Button
        android:id="@+id/buttonDecimal"
        android:layout_width="75dp"
        android:layout_height="73dp"
        android:backgroundTint="@color/black_grey"
        android:text="@string/Button_decimal"
        android:textSize="34sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonEquals"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="75dp"
        android:layout_height="73dp"
        android:backgroundTint="@color/orange"
        android:text="@string/Button_equals"
        android:textSize="34sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonDecimal"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdd" />

    <Button
        android:id="@+id/button1"
        android:layout_width="75dp"
        android:layout_height="73dp"
        android:backgroundTint="@color/black_grey"
        android:text="@string/Button_1"
        android:textSize="34sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="75dp"
        android:layout_height="73dp"
        android:backgroundTint="@color/black_grey"
        android:text="@string/Button_4"
        android:textSize="34sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button7"
        android:layout_width="75dp"
        android:layout_height="73dp"
        android:backgroundTint="@color/black_grey"
        android:text="@string/Button_7"
        android:textSize="34sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAc" />

    <Button
        android:id="@+id/buttonAc"
        android:layout_width="175dp"
        android:layout_height="73dp"
        android:backgroundTint="@color/grey"
        android:text="@string/Button_ac"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/buttonSplit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textResult" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="26dp" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="237dp" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

</androidx.constraintlayout.widget.ConstraintLayout>